Fix loading of Finance::Quote supported sources

BUG: 414333
FIXED-IN: 5.0.8
(cherry picked from commit 2d73384be87dc786fe1aecdd050b3759722e0033)